[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10.38", features = ["vendored"] }
openssl-sys = "0.9.80"
winapi = { version = "0.3.9", features = ["processthreadsapi", "winnt", "winbase", "securitybaseapi"] }
